--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "pancake-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://svy.finance/",
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
