--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "short_name": "PancakeSwap",
-  "name": "PancakeSwap",
-  "description": "Farm CAKE with Pancake LP Tokens",
+  "short_name": "SViolence",
+  "name": "SViolence",
+  "description": "Farm SVY",
   "icons": [
     {
       "src": "favicon.ico",
